[gd_scene load_steps=26 format=3 uid="uid://dcwqv2ymtbue4"]

[ext_resource type="Script" path="res://MrEnemy/MrWhite.gd" id="1_5puls"]
[ext_resource type="Texture2D" uid="uid://c4ethsmtb8j6r" path="res://Tilesets/EnemyW.png" id="1_63kox"]
[ext_resource type="PackedScene" uid="uid://xsejqut0jhwg" path="res://Assets/Objects/bullet.tscn" id="2_i6rst"]
[ext_resource type="AudioStream" uid="uid://0k8io5uxhs74" path="res://Assets/Audio/splat.wav" id="3_hejan"]
[ext_resource type="AudioStream" uid="uid://2h87l4umiibw" path="res://Assets/Audio/SuppressedPistolShort.mp3" id="5_0bi1k"]
[ext_resource type="AudioStream" uid="uid://b3mftvp0027u" path="res://Assets/Audio/stepSound.mp3" id="6_dylr8"]
[ext_resource type="AudioStream" uid="uid://c30rm6g5lkcum" path="res://Assets/Audio/reloadSound.mp3" id="7_6hcre"]
[ext_resource type="AudioStream" uid="uid://dvtclo7wugsd2" path="res://Assets/Audio/gunClickFull.wav" id="8_kakeg"]
[ext_resource type="AudioStream" uid="uid://6cf1xl5x2jcl" path="res://Assets/Audio/shellFallShort.wav" id="9_hcm5s"]
[ext_resource type="AudioStream" uid="uid://doxw1ln3snhxb" path="res://Assets/Audio/shellGround2.wav" id="10_3md0x"]
[ext_resource type="AudioStream" uid="uid://dgtly1xaxsith" path="res://Assets/Audio/INVERTorButton.wav" id="11_1dq7b"]
[ext_resource type="Script" path="res://MrEnemy/Brain.gd" id="11_ih462"]

[sub_resource type="Animation" id="Animation_hagi1"]
resource_name = "FAway"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_02wh5"]
resource_name = "FLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_qk3xg"]
resource_name = "FRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_o8pet"]
resource_name = "FTo"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wg36u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wnqrf"]
resource_name = "WalkAway"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 9]
}

[sub_resource type="Animation" id="Animation_fp1eq"]
resource_name = "WalkL"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 4]
}

[sub_resource type="Animation" id="Animation_adby6"]
resource_name = "WalkR"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 6]
}

[sub_resource type="Animation" id="Animation_3uo3k"]
resource_name = "WalkTo"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eea8b"]
_data = {
"FAway": SubResource("Animation_hagi1"),
"FLeft": SubResource("Animation_02wh5"),
"FRight": SubResource("Animation_qk3xg"),
"FTo": SubResource("Animation_o8pet"),
"RESET": SubResource("Animation_wg36u"),
"WalkAway": SubResource("Animation_wnqrf"),
"WalkL": SubResource("Animation_fp1eq"),
"WalkR": SubResource("Animation_adby6"),
"WalkTo": SubResource("Animation_3uo3k")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_037iq"]
radius = 111.364

[sub_resource type="CircleShape2D" id="CircleShape2D_nwcfx"]
radius = 250.018

[sub_resource type="CircleShape2D" id="CircleShape2D_y6lm5"]
radius = 418.12

[node name="MrWhite" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_5puls")
bullet = ExtResource("2_i6rst")

[node name="WhAni" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("1_63kox")
hframes = 3
vframes = 4

[node name="WhAni" type="AnimationPlayer" parent="WhAni"]
libraries = {
"": SubResource("AnimationLibrary_eea8b")
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-25, 50, 16, 50, 16, 42, 11, 39, 10, 12, 29, -1, 16, -10, 18, -19, 18, -39, 8, -47, -7, -48, -20, -39, -19, -25, -17, -17, -16, -11, -21, -7, -29, -3, -15, 10, -18, 38, -25, 42)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PackedVector2Array(-25, 50, 16, 50, 16, 42, 11, 39, 10, 12, 29, -1, 16, -10, 18, -19, 18, -39, 8, -47, -7, -48, -20, -39, -19, -25, -17, -17, -16, -11, -21, -7, -29, -3, -15, 10, -18, 38, -25, 42)

[node name="Audio" type="Node" parent="."]

[node name="enemyHit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_hejan")

[node name="Shoot" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_0bi1k")
volume_db = -14.474

[node name="stepSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_dylr8")
volume_db = -12.621

[node name="reloadSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_6hcre")
volume_db = -22.142

[node name="emptyClick" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_kakeg")
volume_db = -15.034

[node name="shellSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_hcm5s")
max_polyphony = 2

[node name="shellSound2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_hcm5s")
pitch_scale = 1.33
max_polyphony = 2

[node name="shellSound3" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_hcm5s")
pitch_scale = 0.77
max_polyphony = 2

[node name="shellSound4" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_3md0x")
volume_db = -4.77
pitch_scale = 0.72

[node name="shellSound5" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_3md0x")
volume_db = -5.368

[node name="shellSound6" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_3md0x")
volume_db = -3.355
pitch_scale = 1.41

[node name="invert" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("11_1dq7b")
max_polyphony = 3

[node name="egR" type="Marker2D" parent="."]
position = Vector2(42, -5)

[node name="psst" type="CPUParticles2D" parent="egR"]
emitting = false
amount = 1000
lifetime = 2.4
lifetime_randomness = 1.0
spread = 6.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
linear_accel_max = 10.0
damping_min = 5.0
damping_max = 25.0
scale_amount_min = 0.5
scale_amount_max = 1.3
color = Color(0.4, 0.4, 0.4, 1)

[node name="egL" type="Marker2D" parent="."]
position = Vector2(-42, -5)

[node name="psst" type="CPUParticles2D" parent="egL"]
emitting = false
amount = 1000
lifetime = 2.4
lifetime_randomness = 1.0
direction = Vector2(-1, 0)
spread = 6.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
linear_accel_max = 10.0
damping_min = 5.0
damping_max = 25.0
scale_amount_min = 0.5
scale_amount_max = 1.3
color = Color(0.4, 0.4, 0.4, 1)

[node name="egT" type="Marker2D" parent="."]
position = Vector2(-20, 12)

[node name="psst" type="CPUParticles2D" parent="egT"]
emitting = false
amount = 1000
lifetime = 2.4
lifetime_randomness = 1.0
direction = Vector2(0, 1)
spread = 6.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
linear_accel_max = 10.0
damping_min = 5.0
damping_max = 25.0
scale_amount_min = 0.5
scale_amount_max = 1.3
color = Color(0.4, 0.4, 0.4, 1)

[node name="egA" type="Marker2D" parent="."]
position = Vector2(25, -6)

[node name="psst" type="CPUParticles2D" parent="egA"]
emitting = false
amount = 500
lifetime = 2.4
lifetime_randomness = 1.0
direction = Vector2(0, -1)
spread = 6.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
linear_accel_max = 10.0
damping_min = 5.0
damping_max = 25.0
scale_amount_min = 0.5
scale_amount_max = 1.3
color = Color(0.4, 0.4, 0.4, 1)

[node name="Brain" type="Node2D" parent="."]
script = ExtResource("11_ih462")

[node name="DZsmall" type="Area2D" parent="Brain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brain/DZsmall"]
shape = SubResource("CircleShape2D_037iq")

[node name="DZmed" type="Area2D" parent="Brain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brain/DZmed"]
shape = SubResource("CircleShape2D_nwcfx")

[node name="DZbig" type="Area2D" parent="Brain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Brain/DZbig"]
shape = SubResource("CircleShape2D_y6lm5")

[connection signal="animation_finished" from="WhAni/WhAni" to="." method="_on_step_finish_black" flags=18]
[connection signal="animation_started" from="WhAni/WhAni" to="." method="_on_step_start_black" flags=18]
[connection signal="body_entered" from="Brain/DZsmall" to="Brain" method="_on_d_zsmall_body_entered"]
[connection signal="body_entered" from="Brain/DZmed" to="Brain" method="_on_d_zmed_body_entered"]
[connection signal="body_entered" from="Brain/DZbig" to="Brain" method="_on_d_zbig_body_entered"]
